Button with ripple start

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,8 @@
 @import 'variables/colors';
 @import 'variables/spacing';
+@import 'variables/normalize';
 @import 'variables/typography';
+@import 'components/button';
 @import 'central/central';
 @import 'central/greeting/greeting';
 @import 'home/home';
