--- a/src/scss/variables/_typography.scss
+++ b/src/scss/variables/_typography.scss
@@ -1,7 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Rubik&display=swap');
+
 
 $font-big: 35px;
 $font-larger: 45px;
 $font-extra-big: 55px;
 
 $family-header: 'Lilita One', cursive;
+$family-main: 'Rubik', sans-serif;
