--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,7 +3,9 @@
 @import 'variables/normalize';
 @import 'variables/typography';
 @import 'components/button';
+@import 'components/page404';
 @import 'central/central';
 @import 'central/greeting/greeting';
 @import 'home/home';
+@import 'my-account/my-account';
 @import 'topbar/topbar';
