--- a/src/scss/home/central/_central.scss
+++ b/src/scss/home/central/_central.scss
@@ -23,7 +23,7 @@
 	&__picture {
 	  width: 442px;
 	  height: 400px;
-	  background-image: url('../../img/central.jpg');
+	  background-image: url('../../../img/central.jpg');
 	  background-size: contain;
 	  background-repeat: no-repeat;
 	}
