--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,8 +4,9 @@
 @import 'variables/typography';
 @import 'components/button';
 @import 'components/page404';
-@import 'central/central';
-@import 'central/greeting/greeting';
+@import 'home/central/central';
+@import 'home/central/greeting/greeting';
 @import 'home/home';
+@import 'main/main';
 @import 'my-account/my-account';
 @import 'topbar/topbar';
