--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -12,16 +12,35 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 150px;
-        height: 50px;
         user-select: none;
 	}
 
 	&__legend {
 	    color: $dark;
 	  	font-family: $family-main;
-  		font-size: 2rem;
+      &--big {
+        font-size: 2rem;
+      }
+      &--medium {
+        font-size: 1rem;
+      }
+      &--small {
+        font-size: 12px;
+      }
 	}
+
+  &-big {
+    width: 150px;
+    height: 50px;
+  }
+  &-medium {
+    width: 150px;
+    height: 40px;
+  }
+  &-small {
+    width: 130px;
+    height: 35px;
+  }
 }
 
 .button-ripple {
