--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 @import 'variables/colors';
-@import 'variables/spacing';
+@import 'variables/misc';
 @import 'variables/normalize';
+@import 'variables/spacing';
 @import 'variables/typography';
 @import 'components/button';
 @import 'components/page404';
