--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -1,5 +1,7 @@
 $primary: #0c2233;
 $secondary: #e3f037;
 $light: #f0f0f0;
+$dark-gray: #2b2b2b;
+$dark-gray-hover: #000000;
 $dark: #1c1c1b;
 $lightblue: #3fc0e0;
