--- a/src/scss/topbar/_topbar.scss
+++ b/src/scss/topbar/_topbar.scss
@@ -1,7 +1,7 @@
 .topbar {
 	&__container {
 	  width: 100vw;
-	  height: 200px;
+	  height: 250px;
 	  background-color: $primary;
 	}
 	&__row {
@@ -16,8 +16,10 @@
 		}
 
 		&--second {
+			height: 50px;
 			display: flex;
 			justify-content: space-between;
+			align-items: center;
 			padding: 2rem 2rem 0 2rem;
 			&--menu {
 			  display: flex;
@@ -28,6 +30,9 @@
 		}
 		&--third {
 			display: flex;
+			background-color: $light;
+			border-bottom: $border-standard;
+			padding: 0 2rem;
 		}
 	}
 
@@ -47,7 +52,37 @@
 	&__menu {
 		&--item {
 			color: $secondary;
-			margin: 0 1rem 0 0;
+			margin: 0 2rem 0 0;
+			font-family: $family-acme;
+			font-size: $font-button;
+			letter-spacing: 1px;
+			cursor: pointer;
+		}
+	}
+
+	&__submenu {
+		&--browse {
+			display: flex;
+			align-items: center;
+			height: 50px;
+		}
+		&--item {
+			font-family: $family-acme;
+			font-size: $font-button;
+			color: $dark-gray;
+			margin: 0 0.5rem 0 0;
+			letter-spacing: 1px;
+			padding: 0.5rem 1rem;
+			border-radius: 20px;
+			cursor: pointer;
+			// border: 1px solid red;
+			&:hover {
+				color: $dark-gray-hover;
+				// text-decoration: underline;
+				background-color: white;
+				transition: all 0.4s;
+				box-shadow: $shadow-slim;
+			}
 		}
 	}
 }
