--- a/src/scss/variables/_typography.scss
+++ b/src/scss/variables/_typography.scss
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Acme&family=Lilita+One&family=Rubik&display=swap');
 
-
+$font-button: 20px;
 $font-big: 35px;
 $font-larger: 45px;
 $font-extra-big: 55px;
 
 $family-header: 'Lilita One', cursive;
 $family-main: 'Rubik', sans-serif;
+$family-acme: 'Acme', sans-serif;
