--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -5,3 +5,8 @@ $dark-gray: #2b2b2b;
 $dark-gray-hover: #000000;
 $dark: #1c1c1b;
 $lightblue: #3fc0e0;
+
+:export {
+  primary: #0c2233;
+  secondary: #e3f037;
+}
