--- a/src/scss/variables/_normalize.scss
+++ b/src/scss/variables/_normalize.scss
@@ -188,6 +188,20 @@ textarea {
   margin: 0; /* 2 */
 }
 
+input:focus {
+  outline: none;
+}
+
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
 /**
  * Show the overflow in IE.
  * 1. Show the overflow in Edge.
