Dropdown for topbar

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,7 +4,12 @@
 @import 'variables/spacing';
 @import 'variables/typography';
 @import 'components/button';
+@import 'components/dropdown';
 @import 'components/page404';
+
+@import 'auth/logout';
+@import 'auth/signin';
+@import 'auth/signup';
 @import 'home/central/central';
 @import 'home/central/greeting/greeting';
 @import 'home/home';
