--- a/src/scss/variables/_misc.scss
+++ b/src/scss/variables/_misc.scss
@@ -1,2 +1,3 @@
 $border-standard: 1px solid #3b3936;
 $shadow-slim: 0px 10px 15px -3px rgba(0,0,0,0.3);
+$shadow-yellow: 0px 8px 16px 0px rgba(227, 240, 55, 0.5);
