--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,10 +5,12 @@
 @import 'variables/typography';
 @import 'components/button';
 @import 'components/dropdown';
+@import 'components/input-text';
 @import 'components/page404';
 
 @import 'auth/logout';
-@import 'auth/signin';
+@import 'auth/signin/signin-dropdown';
+@import 'auth/signin/signin-form';
 @import 'auth/signup';
 @import 'home/central/central';
 @import 'home/central/greeting/greeting';
