--- a/src/scss/variables/_normalize.scss
+++ b/src/scss/variables/_normalize.scss
@@ -192,6 +192,12 @@ input:focus {
   outline: none;
 }
 
+input[type="text"],
+input[type="number"] {
+  border: none;
+  box-sizing: border-box;
+}
+
 input::-moz-focus-inner {
   border: 0;
   padding: 0;
