Added InputText features

--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -2,6 +2,7 @@ $primary: #0c2233;
 $secondary: #e3f037;
 $light: #f0f0f0;
 $light-gray: #b5b7ba;
+$disabled-gray: #c5c5c5;
 $medium-gray: #2c2d2e;
 $dark-gray: #2b2b2b;
 $dark-gray-hover: #000000;
