--- a/src/scss/components/_input-text.scss
+++ b/src/scss/components/_input-text.scss
@@ -2,6 +2,7 @@
     &__container {
         width: 100%;
     }
+
     &__field {
         width: 100%;
         height: 40px;
@@ -10,8 +11,20 @@
         padding: 0 4px;
         color: $medium-gray;
         border: 1px solid $light-gray;
-        &:hover, &:focus {
+
+        &:hover,
+        &:focus {
             border: 1px solid $medium-gray;
+        }
+    }
+
+    &__disabled {
+        pointer-events: none;
+        color: $medium-gray;
+        background-color: $disabled-gray;
+
+        &.input-text__field:hover {
+            border: 1px solid $disabled-gray;
         }
     }
 }
