--- a/src/scss/variables/_typography.scss
+++ b/src/scss/variables/_typography.scss
@@ -4,6 +4,7 @@ $font-button: 20px;
 $font-big: 35px;
 $font-larger: 45px;
 $font-extra-big: 55px;
+$font-tiny: 12px;
 
 $family-header: 'Lilita One', cursive;
 $family-main: 'Rubik', sans-serif;
