--- a/src/scss/auth/signin/_signin-form.scss
+++ b/src/scss/auth/signin/_signin-form.scss
@@ -1,8 +1,6 @@
 .signin-form {
-    &__container {
+    &__container {}
 
-    }
-    
     &__wrapper {
         width: 300px;
         display: flex;
@@ -14,7 +12,23 @@
 
     &__input--text {
         width: 100%;
-        margin-bottom: 25px;
+    }
+
+    &__error {
+        &--message {
+            width: 100%;
+            height: 44px;
+            font-size: $font-tiny;
+            line-height: 20px;
+            letter-spacing: 0.4px;
+            color: $red;
+            padding: 3px 0 0 0;
+        }
+    }
+
+    &__spacer {
+        width: 100%;
+        height: 25px;
     }
 
     &__buttons {
