--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -3,6 +3,7 @@ $secondary: #e3f037;
 $light: #f0f0f0;
 $light-gray: #b5b7ba;
 $disabled-gray: #c5c5c5;
+$disabled-legend: #4d4d4d;
 $medium-gray: #2c2d2e;
 $dark-gray: #2b2b2b;
 $dark-gray-hover: #000000;
