--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -10,3 +10,7 @@ $dark-gray-hover: #000000;
 $dark: #1c1c1b;
 $lightblue: #3fc0e0;
 $red: #fc1303;
+$red-dark: #d61a09;
+$primary-light: #1c5b8b;
+$primary-faded: #4696d3;
+$primary-dark: #050e15;
